# Autofocus

./: Autofocus.cpp  Autofocus.hpp  AutofocusSemiconLinuxV5Stable.py  AutofocusSerial.cpp  CMakeLists.txt  ConnectionTest.py  ConnectionTestSerial.py  ConnectionTestUSB.py  GCSLinux.cpp  PiDevice.cpp  PiDevice.hpp  Rasp-pi config files and paths.txt  main.cpp
CPP/: Autofocus.cpp  GCSLinux.cpp  PiDevice.cpp
CPP/Old/: AutofocusSerial.cpp  main.cpp
CPP/include/: PiDevice.hpp
CPP/src/: Autofocus.cpp  PiDevice.cpp  main.cpp
Python/: ConnectionTest.py
Python/Semicon West 2022/: AutofocusSemiconLinuxV4.py  AutofocusV6.desktop  CameraTester.py  README.md  dhcpcdedited.conf
Python/Semicon West 2022/CAD Models/: P-725.8CDE2.stl  P-725BreadBoardAdapter.stl  P-725Camera_Bracket_Ver_02.stl  ThorlabsVB01A.stl  V-308CameraAdapter.stl  V-528ImperialBreadboardMountingAdapter.stl  V-528MazdaChipTopPlateAdapter.stl
Python/Semicon West 2022/Development/: AutofocusSemiconLinuxV7.py  LoadingScreens.py
Python/Semicon West 2022/Documentation/: Explanation of Raspberry Pi Config Files.txt  configedited.txt
Python/Semicon West 2022/Source Code/: AutofocusSemiconLinuxV6.py  lightdm.conf
